--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,38 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  
+}
+
+
+.app{
+ 
+  min-height: 100vh;
+  width: 100vw;
+ 
+}
+
+
 .main{
   display: flex;
   justify-content: space-between;
   max-width: 1920px;
-  margin: 0 40px 0 40px;
+  
   
 }
 
 .main__left{
-  max-width: 50%;
-  width: 100%;
+  max-height: 70vh;
+  max-width: 900px;
+  width: 50%;
+  margin: 0 0 40px 40px;
   
 }
 
 .main__right{
-  max-width: 50%;
-  width: 100%;
+  max-height: 70vh;
+  max-width: 900px;
+  width: 50%;
+  
 }
